--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -29,8 +30,13 @@
     <script type="text/javascript" src="https://i1.silvergames.com/js/jquery-2.1.1.min.js"></script><link rel="canonical" href="http://www.silvergames.com/en/flappy-bird"/></head>
     <body>
         <iframe src="http://f3.silvergames.com/m/flappy-bird/" style="width:100%;height:100%;border:0;margin:0;padding:0"></iframe>
-        
-    <img src="http://m.silvergames.com/div/g.php?id=13" style="display: none;" border="0" height="1" width="1">
+    
+    <div id="sg_logo" style="text-align:center;display:none"><a href="/"><img src="/i/silvergames.png"></a></div>
+ 
+
+    </div>
+
+    <img src="/div/g.php?id=13" style="display: none;" border="0" height="1" width="1">
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-1367050-11']);
